feat(KibImage): added kib-files management for each inspection-list-item-stage